@@ -1,6 +1,6 @@
 // ------------------------------------------------------------------------
-// eca-logger-default.cpp: 
-// Copyright (C) 2002-2004 Kai Vehmanen
+// eca-logger-default.cpp: Default logging subsystem implementation.
+// Copyright (C) 2002-2004,2008 Kai Vehmanen
 //
 // Attributes:
 //     eca-style-version: 2
@@ -31,7 +31,8 @@ void ECA_LOGGER_DEFAULT::do_msg(ECA_LOGGER::Msg_level_t level, const std::string
     if (level == ECA_LOGGER::subsystems) {
       std::cerr << "[* ";
     }
-    else if (is_log_level_set(ECA_LOGGER::module_names) == true &&
+    else if (module_name.size() > 0 &&
+	     is_log_level_set(ECA_LOGGER::module_names) == true &&
 	     level != ECA_LOGGER::eiam_return_values) {
       std::cerr << "(" 
 		<< std::string(module_name.begin(), 
